<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewPack"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@drawable/bg_pack"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingVertical="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pack_one"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Small.Bold"
            android:textColor="#b3ffffff"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Title"
            tools:text="@string/price_one" />

        <TextView
            android:id="@+id/btnPack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_buy"
            android:letterSpacing="0.133"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/buy_now"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Small.Bold"
            android:textColor="@color/colorBlackPrimary"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvStar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Title"
        tools:text="@string/plus_50_stars" />
</LinearLayout>